@@ -14,10 +14,10 @@ index c972b3bc0b..18b5a6ee4f 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 69fcafdfa0..a20abe1614 100644
+index 56c95b8f2a..92ad1b71f1 100644
 --- a/Changes
 +++ b/Changes
-@@ -842,11 +842,6 @@ OCaml 5.0
+@@ -845,11 +845,6 @@ OCaml 5.0
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index 69fcafdfa0..a20abe1614 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -875,6 +870,30 @@ OCaml 5.0
+@@ -878,6 +873,30 @@ OCaml 5.0
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -60,7 +60,7 @@ index 69fcafdfa0..a20abe1614 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -910,13 +929,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -913,13 +932,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -76,7 +76,7 @@ index 69fcafdfa0..a20abe1614 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1023,6 +1042,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1026,6 +1045,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -86,7 +86,7 @@ index 69fcafdfa0..a20abe1614 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1282,6 +1304,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1285,6 +1307,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10057,7 +10057,7 @@ index 0000000000..378a7fd915
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..785b12f976
+index 0000000000..1952e86a87
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10023 @@
@@ -10077,10 +10077,10 @@ index 0000000000..785b12f976
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 69fcafdfa0..a20abe1614 100644
++index 56c95b8f2a..92ad1b71f1 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -842,11 +842,6 @@ OCaml 5.0
++@@ -845,11 +845,6 @@ OCaml 5.0
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10092,7 +10092,7 @@ index 0000000000..785b12f976
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -875,6 +870,30 @@ OCaml 5.0
++@@ -878,6 +873,30 @@ OCaml 5.0
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10123,7 +10123,7 @@ index 0000000000..785b12f976
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -910,13 +929,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -913,13 +932,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10139,7 +10139,7 @@ index 0000000000..785b12f976
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1023,6 +1042,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1026,6 +1045,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10149,7 +10149,7 @@ index 0000000000..785b12f976
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1282,6 +1304,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1285,6 +1307,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
