@@ -255,6 +255,9 @@ Working version
   (Sébastien Hinderer, review by Florian Angeletti, Nicolás Ojeda Bär and
   Gabriel Scherer)
 
+- #11615: remove global variables form asmcomp/linearize.ml
+  (Stefan Muenzel, review by Nicolás Ojeda Bär)
+
 ### Build system:
 
 - #11590: Allow installing to a destination path containing spaces.
